<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_library">Медиатека</string>
    <string name="menu_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
</resources>