<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <ImageView
                android:id="@+id/backToMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="28dp"
                android:text="@string/menu_settings"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_22"/>
        </LinearLayout>


    <Switch
        android:layout_marginTop="20dp"
        android:paddingVertical="@dimen/vertical_padding"
        android:paddingHorizontal="@dimen/standard_padding"
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/vertical_padding"
        android:paddingHorizontal="@dimen/standard_padding"
        android:layout_gravity="start"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:drawableEndCompat="@drawable/share"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/vertical_padding"
        android:paddingHorizontal="@dimen/standard_padding"
        android:layout_gravity="start"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:drawableEndCompat="@drawable/support"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/vertical_padding"
        android:paddingHorizontal="@dimen/standard_padding"
        android:layout_gravity="start"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:drawableEndCompat="@drawable/arrow_forward"/>


</LinearLayout>