<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"
        android:layout_marginTop="14dp"
        />


    <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_8"
            android:backgroundTint="@color/white"
            android:text="@string/menu_search"
            android:textSize="@dimen/text_size_22"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_8"
            android:backgroundTint="@color/white"
            android:text="@string/menu_library"
            android:textSize="@dimen/text_size_22"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black"/>


        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_8"
            android:backgroundTint="@color/white"
            android:text="@string/menu_settings"
            android:textSize="@dimen/text_size_22"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black"/>




</LinearLayout>